[Server] add [files|modlist] request