@@ -3,6 +3,7 @@ package com.zephyrupdater.server.commands.cmdlist;
 import com.zephyrupdater.server.ZephyrServerManager;
 import com.zephyrupdater.server.commands.ICmd;
 import com.zephyrupdater.server.utils.FilesDBUtils;
+import com.zephyrupdater.server.utils.ModListDBUtils;
 
 import java.util.List;
 
@@ -14,7 +15,17 @@ public class CmdAddRequest implements ICmd {
             return;
         }
 
-        FilesDBUtils.addFilesRequest(server.getFilesDB(), argv.get(0), argv.get(1));
+        if(argv.getFirst().trim().equalsIgnoreCase("files")){
+            if(argv.size() < 3){
+                System.out.println(getHelp());
+                return;
+            }
+            FilesDBUtils.addFilesRequest(server.getFilesDB(), argv.get(1), argv.get(2));
+        } else if (argv.getFirst().trim().equalsIgnoreCase("modList")) {
+            ModListDBUtils.addRequest(server.getModListDB(), argv.get(1));
+        } else {
+            System.out.println("Invalid database name.");
+        }
     }
 
     @Override
@@ -24,6 +35,6 @@ public class CmdAddRequest implements ICmd {
 
     @Override
     public String getHelp() {
-        return getCmdName() + " [request alias] [target folder]: add a new request to database.";
+        return getCmdName() + " [files|modList] [request alias] [target folder (if files request)]: add a new request to database.";
     }
 }
